# ratiobot

./: Cargo.toml  Dockerfile
.github/workflows/: build.yaml
src/: local_env.rs  main.rs
src/commands/: mod.rs  ratio.rs  rer.rs  rers.rs
