[package]
name = "ratiobot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ratiobot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = {version = "1.21.2", features = ["full"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
hyper = "0.14.13"
hyper-tls = "0.5.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

[build-dependencies]